Fix bug where Klondike solver/demo was making illegal moves.

The solver wasn't being notified/replaced when the draw number was being
changed. Patch based on a suggestion by Julian Helfferich.

BUG:204073
CCMAIL:julian.helfferich@googlemail.com

svn path=/trunk/KDE/kdegames/kpat/; revision=1075788